# practica_programacion

./: .gitignore  README.md  everyday-gitcommants.txt
python/: main.py  practica_clases.ipynb  practica_funciones.ipynb  practica_libreria_matplotlib.py  practica_loops.py  practica_matplotlib.ipynb  practica_pandas.ipynb  pyproject.toml
sql/: .gitignore  ejercicios.ipynb  ejercicios_sakila.ipynb  mas_ejercicios.ipynb  mas_ejercicios_practica.ipynb  teoria.ipynb
